apps/infra/cilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: cilium
  tls:
    - secretName: argo-tls
      hosts:
        - argo.valley.no
  rules:
    - host: argo.valley.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
